--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,17 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fruktur&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-/*
-background-color: hsl(210, 70%, 4%);
-color: rgb(238, 238, 238);
-background-color: hsla(194, 39%, 33%, 0.575);
-background-color: rgb(233, 233, 233);
-color: hsl(0, 6%, 94%);
-color: hsl(0, 6%, 94%);
-border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-color: rgba(26, 24, 24, 0.801);
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -72,6 +61,9 @@ header {
     padding: 2rem;
     height: 70vh;
     background: url('../img/header_frontpage_1.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     position: relative;
 }
 
